Add jumbotron image. Clean up UI

--- a/VanBrewList/VanBrewList.csproj
+++ b/VanBrewList/VanBrewList.csproj
@@ -179,6 +179,7 @@
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Global.asax" />
     <Content Include="Content\Site.css" />
+    <Content Include="img\tap_dark.jpg" />
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\bootstrap.min.js" />
     <Content Include="ApplicationInsights.config">
@@ -195,6 +196,11 @@
     <Content Include="Scripts\modernizr-2.6.2.js" />
     <Content Include="Scripts\respond.js" />
     <Content Include="Scripts\respond.min.js" />
+    <Content Include="img\ipa.jpg" />
+    <Content Include="img\mug.jpg" />
+    <Content Include="img\pint.jpg" />
+    <Content Include="img\stout.jpg" />
+    <Content Include="img\wheat.jpg" />
     <Content Include="Web.config" />
     <Content Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
@@ -210,6 +216,7 @@
     <Content Include="Views\Brewery\Index.cshtml" />
     <Content Include="Views\Brewery\Detail.cshtml" />
     <Content Include="Views\Brewery\Edit.cshtml" />
+    <Content Include="Views\Shared\_glassware.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
