--- a/VanBrewList/VanBrewList.csproj
+++ b/VanBrewList/VanBrewList.csproj
@@ -221,6 +221,7 @@
     <Content Include="Views\Beer\Growlers.cshtml" />
     <Content Include="Views\Beer\TastingRooms.cshtml" />
     <Content Include="Views\Brewery\Create.cshtml" />
+    <Content Include="Views\Brewery\Delete.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
