--- a/VanBrewList/VanBrewList.csproj
+++ b/VanBrewList/VanBrewList.csproj
@@ -173,7 +173,7 @@
     <Compile Include="Models\ViewModels\AdminIndex.cs" />
     <Compile Include="Models\Beer.cs" />
     <Compile Include="Models\Brewery.cs" />
-    <Compile Include="Models\ViewModels\NewBeer.cs" />
+    <Compile Include="Models\ViewModels\BeerView.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Services\MongoService.cs" />
   </ItemGroup>
